Added color of footer anchor tag color and text decoration type

--- a/brand-new.css
+++ b/brand-new.css
@@ -183,6 +183,10 @@ header p{
   color: #808080;
   padding-right: 0.9vw;
   cursor: pointer;
+} 
+#footer a{
+  color: #808080;
+  text-decoration: none;
 }  
 
 #footer p{
